COSMETIC meta strip displays incorrect muted channel graphic when parent channel is muted #97720

Closed
opened 2022-04-29 20:43:06 +02:00 by a · 6 comments

System Information
Operating system: Windows 8.1
Graphics card: NVIDIA GeForce GT 750M (5+years old)

Blender Version
Broken: 3.2.0 Alpha main a7db7f88b0
Worked: N/A

A closed metastrip is decorated to indicate the state of the strips inside it. The decoration can appear to indicate that contained strips are muted when they are not. Final render output is not affected.

Exact steps for others to reproduce the error

  1. Default startup
  2. Change Editor Type to 'Video Sequencer'
  3. Add adjustment layer in Channel 1
  4. Add second adjustment layer in Channel2
  5. Select both adjustment layers and group them into a meta strip
  6. Open the meta strip and observe adjustment layers on Channels 1 and 2 inside the meta strip
  7. Close the meta strip and move it to Channel 4 (say)
  8. In the TOP LEVEL VSE, not in the meta strip: Mute Channel 2 (checkbox)
  9. Observe that the meta strip decoration changes and the strip on channel 2 INSIDE the meta strip appears to be muted (unexpected)
  10. inside the meta strip the strip on channel 2 is not muted (expected)

Supporting Video

https://youtu.be/E37Hw6-92ts

**System Information** Operating system: Windows 8.1 Graphics card: NVIDIA GeForce GT 750M (5+years old) **Blender Version** Broken: 3.2.0 Alpha main a7db7f88b067 Worked: N/A A closed metastrip is decorated to indicate the state of the strips inside it. The decoration can appear to indicate that contained strips are muted when they are not. Final render output is not affected. **Exact steps for others to reproduce the error** 1. Default startup 2. Change Editor Type to 'Video Sequencer' 3. Add adjustment layer in Channel 1 4. Add second adjustment layer in Channel2 5. Select both adjustment layers and group them into a meta strip 6. Open the meta strip and observe adjustment layers on Channels 1 and 2 inside the meta strip 7. Close the meta strip and move it to Channel 4 (say) 8. In the TOP LEVEL VSE, not in the meta strip: Mute Channel 2 (checkbox) 9. Observe that the meta strip decoration changes and the strip on channel 2 INSIDE the meta strip appears to be muted (unexpected) 10. inside the meta strip the strip on channel 2 is not muted (expected) **Supporting Video** https://youtu.be/E37Hw6-92ts
Author

Added subscriber: @blenderbug12345

Added subscriber: @blenderbug12345
Author

This is fixed by an update to sequencer_draw.c:drawmeta_contents(...)

  if (SEQ_render_is_muted(channels, seqm) || SEQ_render_is_muted(channels, seq)) {

Should probably be:

  if (SEQ_render_is_muted(channels, seqm) || SEQ_render_is_muted(&seqm->channels, seq)) {
This is fixed by an update to sequencer_draw.c:drawmeta_contents(...) ``` if (SEQ_render_is_muted(channels, seqm) || SEQ_render_is_muted(channels, seq)) { ``` Should probably be: ``` if (SEQ_render_is_muted(channels, seqm) || SEQ_render_is_muted(&seqm->channels, seq)) {
a changed title from COSMETIC meta strip displays muted channel graphic when parent channel is muted to COSMETIC meta strip displays incorrect muted channel graphic when parent channel is muted 2022-04-29 20:53:32 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by 2ea9d1fccf

This issue was referenced by 2ea9d1fccffcea6ec3632a2dab54b335c0a8f393

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-05-03 10:56:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97720
No description provided.