Fix T97720: Fix meta strip shows incorrect mute state.

Caused by only checking mute state for meta strip itself and not the
children.